--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,10 +3,10 @@
 <ul id="articles">
   <% @articles.each do |article| %>
     <li>
-      <%= link_to article.title, article_path(article) %>
+      <%= link_to article.title, article_path(article.id) %>
     </li>
   <% end %>
 </ul>
 
-<%= link_to "Create a New Article", new_article_path, class: 'new_article' %>
+<%= link_to 'Create a New Article', new_article_path, class: 'new_article' %>
 
